--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-            NAMA SAYA RAFI 
+            NAMA SAYA RAFI RACHMAWAN
         </h1>
     </body>
 </html>
