add address on index

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
     </head>
     <body>
-        <h1>
-            NAMA SAYA RAFI RACHMAWAN
-        </h1>
+        <h1>NAMA SAYA RAFI RACHMAWAN </h1>
+            
     </body>
 </html>
