add styling on css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-
+<link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>NAMA SAYA RAFI RACHMAWAN </h1>
+        <h1 class="header">NAMA SAYA RAFI RACHMAWAN </h1>
             <p>saya tinggal di tulungagung</p>
     </body>
 </html>
